# cobble

./: .gitignore  package.json  pnpm-lock.yaml  vite.config.ts
.zcode/: config.json
docs/superpowers/specs/: 2026-07-03-mcp-backend-v1-design.md
scripts/: ensure-exe-config.ps1
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_paths.rs  lib.rs  logging.rs  main.rs  paths.rs
src-tauri/src/commands/: file.rs  gallery.rs  mod.rs
src-tauri/src/gallery/: codex_groups.rs  debug_artifacts.rs  event_log.rs  events.rs  groups.rs  image_cache.rs  mod.rs  persistence.rs  state.rs  types.rs  view_model.rs
src-tauri/src/latex/: compiler.rs  detector.rs  doctor.rs  mod.rs  package_detector.rs  types.rs
src-tauri/src/mcp/: http_server.rs  mod.rs  session_store.rs  tools.rs  types.rs
src-tauri/src/settings/: mod.rs  persistence.rs  state.rs  types.rs
src/components/: ArtifactCard.vue  LeftSidebar.vue  MainArea.vue  SessionHeader.vue  SessionItem.vue  SessionList.vue  SessionMeta.vue  SidebarTopActions.vue  TurnBlock.vue  TurnHeader.vue
src/components/artifacts/: ArtifactFlowLayout.vue  ArtifactTile.vue  SourceLogViewer.vue
src/components/pdf/: PdfJsViewer.vue
src/data/: mockSessions.ts
src/pages/: GalleryPage.vue  SettingsPage.vue
src/services/: fileService.ts  galleryService.ts  mcpStatusService.ts  pdfDocumentCache.ts  pdfRenderQueue.ts  settingsService.ts
src/types/: gallery.ts
